cmake_minimum_required(VERSION 3.10)

# Q8.3: Magic Index: A magic index is an array A[0...n-1] is defined to be a
#       an index such that A[i] = i. Given a sorted array of distinct integers,
#       write a method to find a magic index, if one exists, in array A.
add_executable(Q1_CrackingTheCodingInterview_OneOffs_pg23 Q1_pg23.cxx)
